# emscripten-helper-rs

./: Cargo.toml  README.md  build.rs
src/: helper.js  lib.rs
